# Asta

./: .env.example  .env.template  .gitignore  .gitmodules  ANDROID_OPENWAKEWORD_SETUP.md  ANDROID_WAKE_WORD_SUMMARY.md  ASTA_CONTEXT.md  ASTA_IMPLEMENTATION_PLAN.md  ASTA_STATE_REPORT.md  ASTA_TODO.md  ASTA_WHAT_WE_HAVE.md  BLOCKED-PHASE2.md  BLOCKED.md  BLUEPRINT-PHASE2.md  BLUEPRINT.md  CALENDAR_REMOVAL_COMPLETE.md  DEPLOY.md  FINAL_CHECKLIST.md  FINAL_TEST_RESULTS.md  INTEGRATION_COMPLETE.md  MEMORY_LAYER_ARCHITECTURE.md  MEMORY_LAYER_IMPLEMENTATION_TEMPLATE.md  MEMORY_LAYER_SPEC.md  MEMORY_LAYER_VISUAL_GUIDE.md  MOBILE_APP_IMPROVEMENTS.md  MOBILE_APP_SETUP.md  MOBILE_APP_USAGE_GUIDE.md  Makefile  NOTION_INTEGRATION_COMPLETE.md  NOTION_STATUS_REPORT.md  OPENWAKEWORD_READY.md  PORCUPINE_ALTERNATIVE.md  Procfile  QUICK_START.md  REACT_FRONTEND_RECREATION_GUIDE.md  README_START_HERE.md  READY_TO_TEST.md  TEST_NOW.md  TODO-PHASE2.md  TODO.md  (+63 more)
.claude/: rules  settings.local.json
_legacy/: check_reminders.py  debug_query.py  insert_test_reminder.py  send_custom.py  send_now.py  test_agent.py  verify_asta_insert.py  verify_concurrency.py  verify_env_telegram.py  verify_failure.py  verify_load.py  verify_load_clean.py  verify_mongo.py  verify_notification.py  verify_recovery.py  verify_system.py  verify_telegram.py  verify_timezone_wait.py
asta.egg-info/: PKG-INFO  SOURCES.txt
backend/: Dockerfile  requirements.txt
configs/: asta.yaml
deploy/: nginx.conf  prod.env.example
docs/: ASTA_BLUEPRINT_V2.md  ASTA_IMPLEMENTATION_GUIDE.md  CLOSE_THE_LOOP_REPORT.md  (+5 more)
(+264 files in other folders)
