[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asta"
version = "0.1.0"
description = "ASTA Backend Engine"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "backend/tests", "notion_tests"]
asyncio_default_fixture_loop_scope = "function"
